<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">felhasznaloi_fiuk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_staff_login">StaffLoginActivity</string>
    <string name="title_activity_staff__main_menu">Staff_Main_menu</string>
    <string name="title_activity_guest__meal">Guest_Meal</string>
    <string name="title_activity_staff__meal">Staff_Meal</string>
    <string name="title_activity_tables">Tables</string>

    <!--Layout xml texts-->

    <string name="layout_activity_guest_main_menu_etlap">Étlap</string>
    <string name="layout_activity_guest_main_menu_asztal_azonositas">Asztal azonositása</string>
    <string name="layout_activity_guest_main_menu_fizetes">Fizetés</string>
    <string name="layout_activity_guest_main_menu_megrendeleseim">Megrendeléseim</string>

    <string name="layout_activity_staff_bejelentkezes">Staff</string>
    <string name="layout_activity_staff_main_menu_asztalok">Asztalok</string>
    <string name="layout_activity_staff_main_menu_asztalValaszt">Asztal választás:</string>

    <string name="layout_activity_staff_login_felhasznalonev">Felhasználónév</string>
    <string name="layout_activity_staff_login_jelszo">Jelszó</string>
    <string name="layout_activity_staff_login_ButtonLogin">Belépés</string>



</resources>
