<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".Main_menu">

    <ImageView
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="190dp"
        android:id="@+id/imageView"
        android:background="@drawable/brask_logo2"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_guest_main_menu_etlap"
        android:id="@+id/btn_meal"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_color"
        android:layout_marginBottom="7dp"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_guest_main_menu_asztal_azonositas"
        android:id="@+id/btn_tables"
        android:layout_below="@+id/btn_meal"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_color"
        android:layout_marginBottom="7dp"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_guest_main_menu_fizetes"
        android:id="@+id/btn_pay"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_order"
        android:background="@drawable/button_color"
        android:layout_marginBottom="7dp"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_guest_main_menu_megrendeleseim"
        android:id="@+id/btn_order"
        android:layout_below="@+id/btn_tables"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_color"
        android:layout_marginBottom="7dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_staff_bejelentkezes"
        android:id="@+id/btn_login"
        android:onClick="startLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/zxing_transparent" />

</RelativeLayout>