<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="hu.uniobuda.nik.felhasznaloi_fiuk.Staff_Main_menu">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:id="@+id/imageView"
        android:background="@drawable/brask_logo2"

        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_guest_main_menu_etlap"
        android:id="@+id/btn_meal"
        android:background="@drawable/button_color"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="7dp"

        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_staff_main_menu_asztalok"
        android:id="@+id/btn_tables"
        android:background="@drawable/button_color"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_meal"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="7dp"

        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="center"
        />


    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_guest_main_menu_fizetes"
        android:id="@+id/btn_pay"
        android:background="@drawable/button_color"
        android:layout_below="@+id/btn_tables"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="7dp"

        android:layout_column="0"
        android:layout_row="3"
        android:layout_gravity="center"
        />

    <GridLayout
        android:layout_column="0"
        android:layout_row="4"
        android:layout_gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text= "@string/layout_activity_staff_main_menu_asztalValaszt"
        android:id="@+id/textAsztalValasztas"
        android:layout_alignBottom="@+id/asztalSzamValaszto"
        android:singleLine="true"

        android:layout_column="0"
        android:layout_row="0"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asztalSzamValaszto"
        android:layout_below="@+id/btn_pay"
        android:layout_toRightOf="@+id/textAsztalValasztas"

        android:layout_column="1"
        android:layout_row="0"
        android:layout_gravity="center"
        />

    </GridLayout>

</GridLayout>