<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.uniobuda.nik.felhasznaloi_fiuk.Staff_Login"
    android:layout_gravity="center">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_password"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/layout_activity_staff_login_felhasznalonev"
        android:id="@+id/username"
        android:layout_alignStart="@id/edit_password"
        android:layout_alignLeft="@id/edit_password"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_username"
        android:layout_below="@id/username"
        android:layout_alignStart="@id/edit_password"
        android:layout_alignLeft="@id/edit_password"
        >
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/layout_activity_staff_login_jelszo"
        android:id="@+id/password"
        android:layout_below="@id/edit_username"
        android:layout_alignStart="@id/edit_password"
        android:layout_alignLeft="@id/edit_password"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_activity_staff_login_ButtonLogin"
        android:id="@+id/button"
        android:onClick="login"
        android:layout_below="@+id/edit_password"
        android:background="@drawable/button_color"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
